--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "proxy": "http://localhost:4000",
   "dependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,9 +16,11 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-redux": "^8.1.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^2.1.3",
+    "react-toastify": "^8.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
