--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.2.3"
+    "mongoose": "^7.2.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "concurrently": "^8.1.0",
