--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder.js",
     "data:destroy": "node backend/seeder.js -d",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "engines": {
+      "node": ">=18.0.0"
+    }
   },
   "repository": {
     "type": "git",
